# clv-defactio

./: .aesararc  .gitignore  Makefile  README.md  __init__.py  app.py  class-structure.md  clv-defactio.code-workspace  clv-project-start-prompt.md  clv-project-structure.md  clv_prompt_text.txt  driver.ipynb  exceptions.py  mkdocs.yml  poetry_setup.sh  pyproject.toml  pytest.ini  requirements.txt  startup.py
.github/workflows/: ci.yml
clv-defactio.git/: config  packed-refs
clv-defactio.git/info/: refs
clv-defactio.git/objects/info/: commit-graph  packs
deployment/kubernetes/deployments/: clv-service-deployment-aa  (+3 more)
deployment/terraform/: main.tf  outputs.tf  terraform.tfvars  variables.tf
docs/: mkdocs.yml
notebooks/: CLV_360_241115.ipynb  data-processing.ipynb  dependencies.ipynb
scripts/: create_docs_structure.sh
src/: __init__.py  check_configs.py
src/cli/: run_pipeline.py  run_vertex_pipeline.py
src/cloud_functions/: trigger_pipeline.py
src/config/: __init__.py  config_loader.py  config_loader_1126.py  data_processing_config.yaml  deployment_config.yaml  development.yaml  model_config.yaml  pipeline_config.yaml  segment_config.yaml  system_config.yaml
src/core/: analysis.py  clv_system.py
src/dags/: clv_pipeline_dag.py
src/data/: CLVDataProcessor.py  __init__.py  loader.py  processor.py  validator.py
src/features/: dependencies.py  pipeline.py
src/infrastructure/: __init__.py  gcp_setup.py
src/models/: __init__.py  base.py  clv_model.py  manager.py  model_registry.py
src/monitoring/: alerts.py  service.py
src/pipeline/: __init__.py  data_processor.py  manager.py  runner.py  vertex_pipeline.py
src/pipeline copy/: __init__.py  vertex_pipeline.py
src/scripts/: __init__.py  brew_setup.sh  check_credentials.py  check_dependencies.py  create-init-files.py  dev_runner.py  dev_setup.py  fix_code.py  freeze_local.py  import_dependencies.py  install_dependencies.py  pin_dependencies.py  rotate_credentials.py  run_tests.py  setup.py  setup_credentials.sh  test_imports.py  validate_env.py
src/storage/: locations.py
src/utils/: __init__.py  config.py  credentials.py  monitoring.py
src/utils copy/: __init__.py  auth.py  gcp_config.py
src/visualization/: __init__.py
tests/: __init__.py  conftest.py  main.py  run_clv_diagnostic_tests.sh  run_clv_tests.sh  run_integration_tests.sh  run_performance_tests.sh
tests/test_clv/: __init__.py  conftest.py  test_base.py  test_config.py  test_integration.py  test_metadata_analysis.py  test_model.py  test_model_diagnostics.py  test_performance.py  test_preprocessing.py  test_registry.py  test_report_generation.py  test_segmentation.py  test_statistical_analysis.py  test_statistical_visualization.py
(+74 files in other folders)
